# FaunaFinder

./: .env  .gitattributes  .gitignore  .gitmodules  README.md  build.sh  docker-compose.dev.yml  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py  seed.py
backend/app/alembic/: README  env.py
backend/app/alembic/versions/: 02b9b3e141a1_update_basemodel_to_mixins_and_add_.py  05e8874bf777_add_timestamps_on_database_tables.py  1b31344caad0_add_classification_history.py  52d96c9b568f_create_fauna_lookup_table.py  a2df25307aed_add_email_verified_column_on_user.py  a426fd73f99f_test_migrations.py  be88831d9c69_update_fauna_class_with_new_columns.py
backend/app/api/: aws_utils.py  dependencies.py  main.py
backend/app/api/routes/: aws.py  classifier.py  fauna.py  llm.py  login.py  signup.py  users.py
backend/app/assets/csv/: fauna.csv
backend/app/assets/models/: fine_tuned_model.h5
backend/app/classifier/: classifier.py
backend/app/classifier/Eff_Net_V2_L/: array_data.json  model_and_predict.py
backend/app/classifier/Xception/: model_and_predict.py
backend/app/core/: config.py  security.py
backend/app/db/: crud.py  db.py  email_utils.py  fauna.py  models.py
backend/app/templates/: base_email_template.html  password_reset_email.html  test_email.html  verification_email.html
ff-web/: Dockerfile  package-lock.json  package.json
ff-web/public/: index.html  manifest.json
ff-web/src/: App.tsx  index.css  index.tsx
ff-web/src/Helpers/: generateAvatar.ts  index.ts
(+67 files in other folders)
